[gd_scene load_steps=12 format=3 uid="uid://ba435l6xjx80r"]

[ext_resource type="Script" uid="uid://bxkgtddnypdl5" path="res://scripts/enemy/enemy_flying_things.gd" id="1_wvruu"]
[ext_resource type="Texture2D" uid="uid://druxcmjm6feqt" path="res://assets/enemy/enemy-air-attack.png" id="2_dvchv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0j4ij"]
atlas = ExtResource("2_dvchv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f4ah"]
atlas = ExtResource("2_dvchv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr3gf"]
atlas = ExtResource("2_dvchv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ell1h"]
atlas = ExtResource("2_dvchv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjxbg"]
atlas = ExtResource("2_dvchv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ftjft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j4ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f4ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr3gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ell1h")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjxbg")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuw23"]
size = Vector2(42, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvruu"]
size = Vector2(39, 20.7773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da32f"]
size = Vector2(413.64, 340.802)

[node name="flying_enemy" type="CharacterBody2D"]
rotation = 0.005574
script = ExtResource("1_wvruu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5, 14)
sprite_frames = SubResource("SpriteFrames_ftjft")
animation = &"Attack"
frame_progress = 0.286384

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 15)
shape = SubResource("RectangleShape2D_xuw23")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-3, 20)
scale = Vector2(1, 1.125)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -2.94467)
shape = SubResource("RectangleShape2D_wvruu")
debug_color = Color(0.632277, 0.528664, 5.77569e-07, 0.42)

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(15.291, 28.3644)
rotation = 3.14159
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_da32f")
debug_color = Color(0.964808, 0, 0.490525, 0.42)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1.10589, 18.9941)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(5.03894, 6.97202)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
